--- a/cart.html
+++ b/cart.html
@@ -41,10 +41,10 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
-                        <a class="nav-link " href="/index.html">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link " href="index.html">Home <span class="sr-only">(current)</span></a>
                         <a class="nav-link" href="#campaign">Campaign</a>
-                        <a class="nav-link" href="/store.html">Blog</a>
-                        <a class="nav-link active" href="/store.html">Store</a>
+                        <a class="nav-link" href="#blog">Blog</a>
+                        <a class="nav-link active" href="store.html">Store</a>
                         <a class="nav-link" href="#contacts">Contacts</a>
                     </div>
                     <div class="navbar-nav ml-auto">
