--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item active">
-                            <a class="nav-link" href="/index.html">Home <span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#campaign">Campaign</a>
@@ -32,7 +32,7 @@
                             <a class="nav-link" href="#blog">Blog</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/store.html">Store</a>
+                            <a class="nav-link" href="store.html">Store</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#contacts">Contacts</a>
