--- a/store.html
+++ b/store.html
@@ -41,7 +41,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
-                        <a class="nav-link " href="/index.html">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link " href="index.html">Home <span class="sr-only">(current)</span></a>
                         <a class="nav-link" href="#campaign">Campaign</a>
                         <a class="nav-link" href="#blog">Blog</a>
                         <a class="nav-link active" href="store.html">Store</a>
@@ -65,7 +65,7 @@
         <div class="container head">
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb breadcrumb-style">
-                    <li class="breadcrumb-item "><a href="/index.html">Home</a></li>
+                    <li class="breadcrumb-item "><a href="index.html">Home</a></li>
                     <li class="breadcrumb-item active" aria-current="page">Store</li>
                 </ol>
                 <div class="row">
