--- a/wishlist.html
+++ b/wishlist.html
@@ -40,7 +40,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
-                        <a class="nav-link " href="/index.html">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link " href="index.html">Home <span class="sr-only">(current)</span></a>
                         <a class="nav-link" href="#campaign">Campaign</a>
                         <a class="nav-link" href="#blog">Blog</a>
                         <a class="nav-link active" href="store.html">Store</a>
@@ -64,7 +64,7 @@
         <div class="container head">
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb breadcrumb-style">
-                    <li class="breadcrumb-item "><a href="/store.html">Store</a></li>
+                    <li class="breadcrumb-item "><a href="store.html">Store</a></li>
                     <li class="breadcrumb-item active" aria-current="page">Single Product</li>
                 </ol>
                 <div class="row">
