--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
                         <a class="nav-link" href="#search">
                             <img src="./images/icons/bsearch.png" alt="">
                         </a>
-                        <a class="nav-link" href="#favourite">
+                        <a class="nav-link" href="wishlist.html">
                             <img src="./images/icons/bfavourite.png" alt="">
                         </a>
-                        <a class="nav-link cart-view cart-items-number" href="#cart">
+                        <a class="nav-link cart-view cart-items-number">
                             <img id="cart-button" src="./images/icons/bcart.png" alt="">
                             <div class="show-number">
                                 <span class="cart-size"><p id="cart-size-number">2</p></span>
@@ -184,27 +184,27 @@
                 </a>
               </div>
               <!-- mini cart -->
-              <div id="see-cart" class="cart-all ml-auto">
+              <div id="see-cart" class="cart-all">
                 <div id="see-first-cart" class='mini-cart align-items-center '>
                     <img src="./images/items/item1.jpg" alt="">
-                    <div class="mini-cart-details">
+                    <div id="mini-info-1" class="mini-cart-details">
                         <p>DESIGN AND TYPOGRAPHY BY G. WILLIAMS,BOOK</p>
                         <p>Price : $<span id="cart-first-price">40.99</span></p>
                         <p>Quantity : 1</p>
                     </div>
-                    <button id='firstB' class='btn btn-danger  ml-auto'>X</button>
+                    <button id='firstB' class=' btn-remove  ml-auto'>X</button>
                 </div>
                 <div id="see-second-cart" class='mini-cart align-items-center'>
                     <img src="./images/items/item2.jpg" alt="">
-                    <div class="mini-cart-details">
+                    <div id="mini-info-2" class="mini-cart-details">
                         <p>BIG ENVELOP MOCKUP PDF AND PSD PACK</p>
                         <p>Price : $<span id="cart-second-price">150</span></p>
                         <p>Quantity : 1</p>
                     </div>
-                    <button id='secondB' class='btn btn-danger ml-auto'>X</button>
+                    <button id='secondB' class='btn-remove ml-auto'>X</button>
                 </div>
-                <h4 id='nothing'>No items in your cart</h4>
-                <button class="btn btn-info" id='hide-cart'>Hide Cart</button>
+                <h6 id='nothing'>No items in your cart</h6>
+                <a href="cart.html"><button class="btn-cart" href="cart.html">Show Cart</button></a>
             </div>
         </div>
         </section>
@@ -259,13 +259,13 @@
                     <div id="carouselExampleControls" class="cc carousel slide" data-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
+                                <img src="./images/items/item10.jpg" class="d-block w-100" alt="...">
+                            </div>
+                            <div class="carousel-item">
                                 <img src="./images/items/item2.jpg" class="d-block w-100" alt="...">
                             </div>
                             <div class="carousel-item">
-                                <img src="./images/items/item3.jpg" class="d-block w-100" alt="...">
-                            </div>
-                            <div class="carousel-item">
-                                <img src="./images/items/item4.jpg" class="d-block w-100" alt="...">
+                                <img src="./images/items/item11.jpg" class="d-block w-100" alt="...">
                             </div>
                         </div>
                         <a class="carousel-control-prev" href="#carouselExampleControls" role="button"
@@ -316,7 +316,7 @@
                     </div>
                     <div class="col-12 col-sm-12 col-md-6 col-lg-6 pop-large-image">
                         <div class="popular">
-                            <img src="./images/items/item12.jpg" alt="">
+                            <img src="./images/items/item13.jpg" alt="">
                             <p>Drinking Vinegar Vinyl skateboard shoreditch</p>
                             <p>$60.99</p>
                         </div>
