--- a/store.html
+++ b/store.html
@@ -17,7 +17,7 @@
                 <img src="./images/icons/icon.png" alt="">
                 <h3>lenox <sub>store</sub> </h3>
             </div>
-            <div class="d-flex ml-auto">
+            <div class="d-flex ml-auto social-head">
                 <a class="social" href="#twitter">
                     <img src="./images/icons/blacktwitter.png" alt="">
                 </a>
@@ -48,13 +48,13 @@
                         <a class="nav-link" href="#contacts">Contacts</a>
                     </div>
                     <div class="navbar-nav ml-auto">
-                        <a class="nav-link" href="#favourite">
+                        <a class="nav-link" href="wishlist.html">
                             <img src="./images/icons/favourite.png" alt="">
                         </a>
                         <a class="nav-link cart-view cart-items-number">
                             <img id="cart-button" src="./images/icons/cart.png" alt="">
                             <div class="show-number">
-                                <span id="cart-size-number">2</span>
+                                <span class="cart-size"><p id="cart-size-number">2</p></span>
                             </div>
                         </a>
                     </div>
@@ -74,27 +74,27 @@
                     </div>
                 </div>
             </nav>
-            <div id="see-cart" class="cart-all ml-auto">
+            <div id="see-cart" class="cart-all">
                 <div id="see-first-cart" class='mini-cart align-items-center '>
                     <img src="./images/items/item1.jpg" alt="">
-                    <div class="mini-cart-details">
+                    <div id="mini-info-1" class="mini-cart-details">
                         <p>DESIGN AND TYPOGRAPHY BY G. WILLIAMS,BOOK</p>
                         <p>Price : $<span id="cart-first-price">40.99</span></p>
                         <p>Quantity : 1</p>
                     </div>
-                    <button id='firstB' class='btn btn-danger  ml-auto'>X</button>
+                    <button id='firstB' class=' btn-remove  ml-auto'>X</button>
                 </div>
                 <div id="see-second-cart" class='mini-cart align-items-center'>
                     <img src="./images/items/item2.jpg" alt="">
-                    <div class="mini-cart-details">
+                    <div id="mini-info-2" class="mini-cart-details">
                         <p>BIG ENVELOP MOCKUP PDF AND PSD PACK</p>
                         <p>Price : $<span id="cart-second-price">150</span></p>
                         <p>Quantity : 1</p>
                     </div>
-                    <button id='secondB' class='btn btn-danger ml-auto'>X</button>
+                    <button id='secondB' class='btn-remove ml-auto'>X</button>
                 </div>
-                <h4 id='nothing'>No items in your cart</h4>
-                <button class="btn btn-info" id='hide-cart'>Hide Cart</button>
+                <h6 id='nothing'>No items in your cart</h6>
+                <a href="cart.html"><button class="btn-cart" href="cart.html">Show Cart</button></a>
             </div>
         </div>
     </header>
